--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* HEADER */
+
 header {
   background-color: #31353d;
   display: flex;
@@ -44,6 +46,35 @@ header ul li {
   padding: 8px;
   margin: 7px;
 }
+
+/* HERO */
+
+.hero {
+  background-image: url(../images/hero-edit.jpg);
+  background-size: cover;
+  background-position: bottom;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.hero h2 {
+  font-size: 24px;
+  width: 700px;
+  line-height: 1.8;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.hero-face {
+  padding: 18px 30px 0 30px;
+  border-top: 2px solid #92ccce;
+}
+
+/* ABOUT ME */
 
 .about h2 {
   color: #445877;
