--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ header {
 }
 
 header h1 {
-  font-size: 64px;
+  font-size: 70px;
   letter-spacing: .8px;
   color: #31353d;
   background-color: #92ccce;
@@ -31,7 +31,7 @@ header h1 {
 header a {
   text-decoration: none;
   color: #92ccce;
-  font-size: 28px;
+  font-size: 24px;
 }
 
 header ul {
@@ -44,7 +44,7 @@ header ul li {
   text-decoration: none;
   border-bottom: 5px solid #92ccce;
   padding: 8px;
-  margin: 7px;
+  margin: 10px;
 }
 
 /* HERO */
@@ -76,6 +76,27 @@ header ul li {
 
 /* ABOUT ME */
 
+.about {
+  display: flex;
+  justify-content: space-around;
+  margin: 30px 90px 10px 140px;
+  flex-wrap: wrap;
+}
+
 .about h2 {
+  flex: .5 200px;
   color: #445877;
+  font-size: 54px;
+  text-align: right;
+  padding: 6px 16px 80px 0;
+}
+
+.about-text {
+  flex: 15;
+  color: #445877;
+  font-size: 20px;
+  line-height: 1.5;
+  padding-left: 40px;
+  width: 70%;
+  border-left: 5px solid #445877;
 }
