--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,3 +102,60 @@ header ul li {
 }
 
 /* WORK */
+
+.work {
+  display: flex;
+  justify-content: space-around;
+  margin: 30px 90px 10px 140px;
+  flex-wrap: wrap;
+}
+
+.work h2 {
+  flex: .5 200px;
+  color: #445877;
+  font-size: 54px;
+  text-align: right;
+  padding: 6px 16px 80px 0;
+}
+
+.work-images {
+  flex: 15;
+  color: #445877;
+  padding-left: 40px;
+  width: 70%;
+  border-left: 5px solid #445877;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.img-lg {
+  height: 1000px;
+  width: 100%;
+  margin-bottom: 10px;
+  background-image: url(../images/hero.jpg)
+}
+
+.img-sm-left,
+.img-sm-right {
+  height: 300px;
+  width: 49%;
+  margin: 10px 0;
+  background-image: url(../images/hero.jpg);
+}
+
+.img-sm-left {
+  margin-right: 10px;
+}
+
+/*
+.img-lg a img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.img-sm a img {
+  max-width: 45%;
+  max-height: 45%;
+}
+*/
