--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 /* HEADER */
 
 header {
@@ -29,7 +33,6 @@ header h1 {
 }
 
 header a {
-  text-decoration: none;
   color: #92ccce;
   font-size: 24px;
 }
@@ -41,7 +44,6 @@ header ul {
 }
 
 header ul li {
-  text-decoration: none;
   border-bottom: 5px solid #92ccce;
   padding: 8px;
   margin: 10px;
@@ -130,32 +132,95 @@ header ul li {
 }
 
 .img-lg {
-  height: 1000px;
+  height: 650px;
   width: 100%;
   margin-bottom: 10px;
   background-image: url(../images/hero.jpg)
 }
 
-.img-sm-left,
-.img-sm-right {
-  height: 300px;
+.img-sm {
+  height: 200px;
   width: 49%;
   margin: 10px 0;
   background-image: url(../images/hero.jpg);
 }
 
-.img-sm-left {
+.img-sm,
+.img-lg {
+  border: 7px solid #92ccce;
+}
+
+.work-subtitle-container {
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
+  height: 100%;
+}
+
+.img-text {
+  background-color: #92ccce;
+  color: #31353d;
+  padding: 7px 10px;
+  margin-bottom: 20px;
+}
+
+.img-text h3 {
+  padding-bottom: 3px;
+  font-size: 24px;
+}
+
+.img-text p {
+  font-size: 14px;
+}
+
+/* CONTACT ME */
+
+.contact {
+  display: flex;
+  justify-content: space-around;
+  margin: 30px 90px 10px 140px;
+  flex-wrap: wrap;
+}
+
+.contact h2 {
+  flex: .5 200px;
+  color: #445877;
+  font-size: 54px;
+  text-align: right;
+  padding: 6px 16px 0 0;
+}
+
+address {
+  flex: 15;
+  color: #445877;
+  font-size: 20px;
+  line-height: 1.5;
+  padding-left: 40px;
+  width: 70%;
+  border-left: 5px solid #445877;
+}
+
+address ul {
+  display: flex;
+  list-style: none;
+  justify-content: space-evenly;
+  margin-top: 45px;
+}
+
+address ul li {
+  padding: 0 3px;
+  border-bottom: 5px solid #31353d;
+}
+
+address ul li a {
+  font-style: normal;
+  color: #31353d;
+  font-size: 24px;
+}
+
+/* UTILITY CLASSES */
+
+.margin-right {
   margin-right: 10px;
 }
 
-/*
-.img-lg a img {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.img-sm a img {
-  max-width: 45%;
-  max-height: 45%;
-}
-*/
