--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,6 +200,8 @@ header ul li {
   padding: 6px 16px 0 0;
 }
 
+/* CONTACT ME */
+
 address {
   flex: 15;
   color: #445877;
@@ -234,3 +236,177 @@ address ul li a {
   margin-right: 10px;
 }
 
+/* MEDIA QUERIES */
+
+@media only screen and (max-width: 1085px) {
+
+  /* HEADER */
+
+  header {
+    background-color: #31353d;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  header h1 {
+    font-size: 100px;
+    width: 100%;
+    text-align: center;
+    letter-spacing: .8px;
+    color: #31353d;
+    padding: 20px 0;
+    background-color: #92ccce;
+    margin: 0 0 20px 0;
+  }
+
+  header a {
+    color: #92ccce;
+    font-size: 32px;
+  }
+
+  header ul {
+    display: flex;
+    list-style: none;
+    margin: 0 0 35px 0;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  header ul li {
+    border-bottom: 5px solid #92ccce;
+    padding: 8px;
+    margin: 10px;
+  }
+
+  /* HERO */
+
+  .hero {
+    height: 12%;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .hero h2 {
+    font-size: 36px;
+    width: 70%;
+    line-height: 1.8;
+    text-align: center;
+    margin: 40px 0 30px 0;
+  }
+
+  .hero-face {
+    padding: 40px 30px 40px 30px;
+    border-top: 8px solid #92ccce;
+  }
+
+  /* ABOUT ME*/
+
+  .about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    flex-direction: column;
+  }
+
+  .about h2 {
+    flex: 0;
+    width: 70%;
+    font-size: 68px;
+    text-align: center;
+    padding: 60px 20px 10px 20px;
+    border-bottom: 10px solid #445877;
+  }
+
+  .about-text {
+    flex: 0;
+    padding: 0 40px 0 40px;
+    width: 100%;
+    border: none;
+    margin: 50px 0 0 0;
+    font-size: 26px;
+  }
+
+  /* WORK */
+  
+  .work {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    flex-direction: column;
+  }
+  
+  .work h2 {
+    flex: 0;
+    width: 70%;
+    font-size: 68px;
+    text-align: center;
+    padding: 60px 20px 10px 20px;
+    border-bottom: 10px solid #445877;
+  }
+
+  .work-images {
+    flex: 0;
+    padding: 0 40px 0 40px;
+    width: 100%;
+    border: none;
+    margin: 60px 0 30px 0;
+  }
+  
+  .img-lg {
+    height: 200px;
+  }
+  
+  .img-sm {
+    width: 100%;
+    margin-right: 0;
+  }
+
+  /* CONTACT ME */
+
+  .contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    flex-direction: column;
+  }
+  
+  .contact h2 {
+    flex: 0;
+    width: 70%;
+    font-size: 68px;
+    text-align: center;
+    padding: 60px 20px 10px 10px;
+    border-bottom: 10px solid #445877;
+  }
+
+  address {
+    flex: 0;
+    padding: 0 20px 0 20px;
+    width: 100%;
+    border: none;
+    margin: 0 0 30px 0;
+  }
+
+  address ul {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  address ul li {
+    padding: 5px 0;
+    margin: 0 0 20px 0;
+  }
+
+  address ul li a {
+    font-size: 24px;
+  }
+
+}
