consolidated redundant css, slight margin and padding changes in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
+/********/
 /* PAGE */
+/********/
 
 * {
   box-sizing: border-box;
@@ -15,7 +17,9 @@ a {
   text-decoration: none;
 }
 
+/**********/
 /* HEADER */
+/**********/
 
 header {
   background-color: #31353d;
@@ -40,7 +44,7 @@ header a {
 header ul {
   display: flex;
   list-style: none;
-  margin: 26px 80px 0 0;
+  margin: 26px 100px 0 0;
 }
 
 header ul li {
@@ -49,7 +53,9 @@ header ul li {
   margin: 10px;
 }
 
+/********/
 /* HERO */
+/********/
 
 .hero {
   background-image: url(../images/hero-edit.jpg);
@@ -76,24 +82,33 @@ header ul li {
   border-top: 2px solid #92ccce;
 }
 
-/* ABOUT ME */
+/******************************/
+/* ABOUT ME, WORK, CONTACT ME */
+/******************************/
 
-.about {
-  display: flex;
-  justify-content: space-around;
-  margin: 30px 90px 10px 140px;
-  flex-wrap: wrap;
-}
+/* SHARED */
 
-.about h2 {
+.work h2,
+.about h2,
+.contact h2 {
   flex: .5 200px;
   color: #445877;
   font-size: 54px;
   text-align: right;
-  padding: 6px 16px 80px 0;
+  padding: 6px 16px 0 0;
 }
 
-.about-text {
+.about,
+.work,
+.contact {
+  display: flex;
+  justify-content: space-around;
+  margin: 30px 100px 10px 120px;
+  flex-wrap: wrap;
+}
+
+.about-text,
+address {
   flex: 15;
   color: #445877;
   font-size: 20px;
@@ -103,26 +118,13 @@ header ul li {
   border-left: 5px solid #445877;
 }
 
+/* ABOUT ME */
+
 .about-p1 {
   margin-bottom: 20px;
 }
 
 /* WORK */
-
-.work {
-  display: flex;
-  justify-content: space-around;
-  margin: 30px 90px 10px 140px;
-  flex-wrap: wrap;
-}
-
-.work h2 {
-  flex: .5 200px;
-  color: #445877;
-  font-size: 54px;
-  text-align: right;
-  padding: 6px 16px 80px 0;
-}
 
 .work-images {
   flex: 15;
@@ -147,6 +149,17 @@ header ul li {
   margin: 10px 0;
 }
 
+.img-sm,
+.img-lg {
+  border: 7px solid #92ccce;
+}
+
+.img-lg:hover,
+.img-sm:hover {
+  background-color: white;
+  opacity: 70%;
+}
+
 .run-buddy {
   background-image: url(../images/run-buddy.png);
 }
@@ -165,17 +178,6 @@ header ul li {
 
 .tbd {
   background-image: url(../images/hero.jpg);
-}
-
-.img-sm,
-.img-lg {
-  border: 7px solid #92ccce;
-}
-
-.img-lg:hover,
-.img-sm:hover {
-  background-color: white;
-  opacity: 70%;
 }
 
 .work-subtitle-container {
@@ -208,28 +210,7 @@ header ul li {
 }
 
 .contact {
-  display: flex;
-  justify-content: space-around;
-  margin: 30px 90px 30px 140px;
-  flex-wrap: wrap;
-}
-
-.contact h2 {
-  flex: .5 200px;
-  color: #445877;
-  font-size: 54px;
-  text-align: right;
-  padding: 6px 16px 0 0;
-}
-
-address {
-  flex: 15;
-  color: #445877;
-  font-size: 20px;
-  line-height: 1.5;
-  padding-left: 40px;
-  width: 70%;
-  border-left: 5px solid #445877;
+  margin-bottom: 30px;
 }
 
 address ul {
@@ -252,17 +233,23 @@ address ul li a,
   font-size: 24px;
 }
 
+/*******************/
 /* UTILITY CLASSES */
+/*******************/
 
 .margin-right {
   margin-right: 10px;
 }
 
+/*****************/
 /* MEDIA QUERIES */
+/*****************/
 
 @media only screen and (max-width: 1085px) {
 
+  /**********/
   /* HEADER */
+  /**********/
 
   header {
     background-color: #31353d;
@@ -302,7 +289,9 @@ address ul li a,
     margin: 10px;
   }
 
+  /********/
   /* HERO */
+  /********/
 
   .hero {
     height: 12%;
@@ -326,9 +315,15 @@ address ul li a,
     border-top: 8px solid #92ccce;
   }
 
-  /* ABOUT ME*/
+  /******************************/
+  /* ABOUT ME, WORK, CONTACT ME */
+  /******************************/
 
-  .about {
+  /* SHARED */
+
+  .about,
+  .work,
+  .contact {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -336,7 +331,9 @@ address ul li a,
     flex-direction: column;
   }
 
-  .about h2 {
+  .about h2,
+  .work h2,
+  .contact h2 {
     flex: 0;
     width: 70%;
     font-size: 56px;
@@ -345,33 +342,22 @@ address ul li a,
     border-bottom: 10px solid #445877;
   }
 
-  .about-text {
+  .about-text,
+  address {
     flex: 0;
-    padding: 0 40px 0 40px;
+    padding: 0 10px 0 10px;
     width: 100%;
     border: none;
+  }
+
+  /* ABOUT ME */
+
+  .about-text {
     margin: 50px 0 0 0;
     font-size: 26px;
   }
 
   /* WORK */
-  
-  .work {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    flex-direction: column;
-  }
-  
-  .work h2 {
-    flex: 0;
-    width: 70%;
-    font-size: 56px;
-    text-align: center;
-    padding: 60px 20px 10px 20px;
-    border-bottom: 10px solid #445877;
-  }
 
   .work-images {
     flex: 0;
@@ -400,28 +386,11 @@ address ul li a,
     display: none;
   }
 
-  .contact {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    flex-direction: column;
-  }
-  
   .contact h2 {
-    flex: 0;
-    width: 70%;
-    font-size: 56px;
-    text-align: center;
-    padding: 30px 10px 20px 10px;
-    border-bottom: 10px solid #445877;
+    padding-top: 30px;
   }
 
   address {
-    flex: 0;
-    padding: 0 20px 0 20px;
-    width: 100%;
-    border: none;
     margin: 0 0 50px 0;
   }
 
