--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,10 +161,7 @@ address {
 .neural-net::before,
 .tbd::before {
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  inset: 0;
   opacity: 60%;
   content: "";
 }
