updated work with color coded project

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,7 @@ address {
 }
 
 .run-buddy::before {    
-  background-image: url(../images/run-buddy.png);
+  background-image: url(../images/color-coded.png);
 }
 
 .horiseon::before {    
